@@ -2,6 +2,7 @@ Revision history for Getopt-Long
 
 {{$NEXT}}
     - Add support for enum types
+    - Add IO::Path argument support
     - Add type conversions for positional arguments
     - Reject values failing argument constraints
     - Add compat-positional option
